testsuite/tests/checks/deep_inheritance/test.out
definitions.ads:9:10: error: deep_inheritance_hierarchies - rule violation
9 |     type T3 is new T0 and I2 with null record; -- FLAG (if rule parameter is 2)
  |          ^^ 

